add a parameter named 'frequency_step' under odometry space and set it 40

--- a/config/horizon.yaml
+++ b/config/horizon.yaml
@@ -44,6 +44,7 @@ mapping:
 
 odometry: 
     publish_odometry_without_downsample: true
+    frequency_step: 40            # the roughly targeted frequency was calculated by original frequency divided by the frequcy step.
 
 publish:
     path_en: true                 # false: close the path output
