--- a/config/avia.yaml
+++ b/config/avia.yaml
@@ -1,6 +1,6 @@
 common:
-    lid_topic:  "/livox/lidar" 
-    imu_topic:  "/livox/imu" 
+    lid_topic:  "/avia/livox/lidar" 
+    imu_topic:  "/avia/livox/imu" 
     con_frame: false # true: if you need to combine several LiDAR frames into one
     con_frame_num: 1 # the number of frames combined
     cut_frame: false # true: if you need to cut one LiDAR frame into several subframes
@@ -44,6 +44,7 @@ mapping:
 
 odometry: 
     publish_odometry_without_downsample: true
+    frequency_step: 40            # the roughly targeted frequency was calculated by original frequency divided by the frequcy step.
 
 publish:
     path_en: true                 # false: close the path output
