--- a/config/ouster64.yaml
+++ b/config/ouster64.yaml
@@ -43,7 +43,8 @@ mapping:
                    0, 0, 1 ]
 
 odometry: 
-    publish_odometry_without_downsample: false
+    publish_odometry_without_downsample: true
+    frequency_step: 4            # the roughly targeted frequency was calculated by original frequency divided by the frequcy step.
 
 publish:
     path_en: true                 # false: close the path output
